--- a/T&C.html
+++ b/T&C.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="Wert_2031.ico" type="image/x-icon" />
     <title>Wert-Web</title>
     <meta description="Wert-Web is an interactive HTML5 Website where i show my videos and things that i am doing.">
-    <link rel="stylesheet" type="text/css" href="Wert-Web.css"> 
+    <link rel="stylesheet" type="text/css" href="Main-Style.css"> 
 </head>
 <body>
     <div id="navbar"></div>
