--- a/T&C.html
+++ b/T&C.html
@@ -18,8 +18,8 @@
       document.getElementById("navbar").innerHTML = data;
 
       // After loading, attach sounds
-      const hoverSound = new Audio("sounds/hover.mp3");
-      const clickSound = new Audio("sounds/click.mp3");
+      const hoverSound = new Audio("sounds/hover.wav");
+      const clickSound = new Audio("sounds/click.wav");
 
       document.querySelectorAll(".navbar a").forEach(link => {
         link.addEventListener("mouseenter", () => {
@@ -37,7 +37,7 @@
   <h1>Terms and Conditions</h1>
   <p><strong>Effective Date:</strong> October 3, 2025</p>
 
-  <p>Welcome to <a href="Wert-Web.html"><strong>Wert-Web</strong></a>, the official website of 
+  <p>Welcome to <a href="index.html"><strong>Wert-Web</strong></a>, the official website of 
     <a href="https://www.youtube.com/@Wert_2031" target="_blank" rel="noopener noreferrer">Wert_2031</a>. 
     These Terms and Conditions (“Terms”) govern your access to and use of this website (“Site”). 
     By accessing or using the Site, you agree to be bound by these Terms. 
