--- a/All.html
+++ b/All.html
@@ -18,8 +18,8 @@
       document.getElementById("navbar").innerHTML = data;
 
       // After loading, attach sounds
-      const hoverSound = new Audio("sounds/hover.mp3");
-      const clickSound = new Audio("sounds/click.mp3");
+      const hoverSound = new Audio("sounds/hover.wav");
+      const clickSound = new Audio("sounds/click.wav");
 
       document.querySelectorAll(".navbar a").forEach(link => {
         link.addEventListener("mouseenter", () => {
