--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       document.getElementById("navbar").innerHTML = data;
 
       // After loading, attach sounds
-      const hoverSound = new Audio("sounds/hover.mp3");
-      const clickSound = new Audio("sounds/click.mp3");
+      const hoverSound = new Audio("sounds/hover.wav");
+      const clickSound = new Audio("sounds/click.wav");
 
       document.querySelectorAll(".navbar a").forEach(link => {
         link.addEventListener("mouseenter", () => {
@@ -34,7 +34,7 @@
     });
 </script>
     <h1>Welcome to the Wert-Web</h1>
-    <p id="Intro-p">This is a website I made using <a href="#Sources">sources</a><a href="Wert-Web-T&C.html">(refrenced in the t&c agrement section2)</a>for all of you to enjoy my videos and content!:)</p>
+    <p id="Intro-p">This is a website I made using <a href="#Sources">sources</a><a href="T&C.html">(refrenced in the t&c agrement section2)</a>for all of you to enjoy my videos and content!:)</p>
 <tr>
   <th><iframe width="560" height="315" src="https://www.youtube.com/embed/NHbcGTuF4Jg?si=Udqc6hG1ffSLpNdh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><h2 id="one">1st</h2></th>
   <th><iframe width="560" height="315" src="https://www.youtube.com/embed/m2M4YKF83Tc?si=hNxuDMq_Pg-1qMjg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><h2 id="two">2nd</h2></th>
@@ -47,6 +47,6 @@
   <li>W3 Schools&trade;. <a href="https://www.w3schools.com/">Click Here To See</a></li>
   <li>Google Chrome&trade;<a href="https://www.google.com/chrome/">Click Here To See</a></li>
 </ol>
-<strong><a href="Wert-Web-T&C.html">T&C</a></strong>
+<strong><a href="T&C.html">T&C</a></strong>
 </body>
 </html>
