--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
       <div class="video-item">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/NHbcGTuF4Jg?si=Udqc6hG1ffSLpNdh" 
                 title="Wert-Web Video 1" frameborder="0" allowfullscreen></iframe>
-        <h2>1st Video</h2>
+        <h2 id="one">1st Video</h2>
       </div>
       <div class="video-item">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/m2M4YKF83Tc?si=hNxuDMq_Pg-1qMjg" 
                 title="Wert-Web Video 2" frameborder="0" allowfullscreen></iframe>
-        <h2>2nd Video</h2>
+        <h2 id="two">2nd Video</h2>
       </div>
       <div class="video-item">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/mZGiCQhGjLM?si=dKVsRKTvaHfhW-X6" 
                 title="Wert-Web Video 3" frameborder="0" allowfullscreen></iframe>
-        <h2>3rd Video</h2>
+        <h2 id="three">3rd Video</h2>
       </div>
     </section>
 
